# Tooling

./: CLAUDE.md  README.md  copilot-instructions.md  sync-prompts.ps1
copilot/skills/_shared/: README.md  fact-check-base.md  formatting-rules.md  quality-checklist.md  seo-and-metadata.md  source-hierarchy.md  writing-style.md
copilot/skills/ado-work-items/: README.md  SKILL.md
copilot/skills/article-integrity/: README.md  SKILL.md
copilot/skills/azure-quickstart-templates/: README.md  SKILL.md
copilot/skills/doc-verifier/: README.md  SKILL.md
copilot/skills/doc-writer/: README.md  SKILL.md
copilot/skills/documentor-workflow/: README.md  SKILL.md
copilot/skills/freshness-pass/: README.md  SKILL.md
copilot/skills/my-workflow/: README.md  SKILL.md
copilot/skills/repo-recon/: README_1.md  SKILL.md
copilot/skills/sources/: Azure.yml  MicrosoftCopilot.yml  MicrosoftDocs.yml  README.md  (+24 more)
fact-check-v2/: README.md  pyproject.toml
fact-check-v2/docs/: WALLED_OFF_TESTING.md
fact-check-v2/examples/: facts.json
fact-check-v2/examples/articles/: article-a.md  article-b.md
fact-check-v2/fact_check_v2/: __init__.py  batch_runner.py  chunking.py  cli.py  connectors.py  engine.py  gap_analysis.py  models.py  policy.py  reports.py  storage.py  telemetry.py  tool_executor.py  updater.py
fact-check-v2/tests/: test-doc-1.md  test-doc-2.md  test-doc-3.md  test_chunking.py  test_engine_connectors.py  test_policy.py  test_run_store.py  test_telemetry.py  test_tool_executor.py  test_updater.py
prompts/: git-workflow.prompt.md  pr-description-template.prompt.md
(+36 files in other folders)
