[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fact-check-v2"
version = "0.1.0"
description = "Local-first fact checking with gap analysis, reporting, update proposals, and sandboxed tool execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
]

[project.scripts]
fact-check-v2 = "fact_check_v2.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["fact_check_v2*"]
